--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
+  "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
