--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,10 @@
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
+
   "main": "src/index.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node dist/src/main",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
