--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "feedbackapp",
+  "name": "talkback",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/meetrajpal/feedbackApp.git"
+    "url": "git+https://github.com/meetrajpal/talkback.git"
   },
   "author": "Meet Rajpal",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/meetrajpal/feedbackApp/issues"
+    "url": "https://github.com/meetrajpal/talkback/issues"
   },
-  "homepage": "https://github.com/meetrajpal/feedbackApp#readme",
+  "homepage": "https://github.com/meetrajpal/talkback#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
