--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.21",
     "mailgun-js": "^0.22.0",
     "mongoose": "^8.1.3",
+    "node-mailjet": "^6.0.5",
     "nodemon": "^3.0.3",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
