--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-google-oauth20": "^2.0.0",
     "path-parser": "^6.1.0",
     "react-router-dom": "^6.22.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "stripe": "^14.17.0"
   }
 }
